--- a/src/components/dailyWeather/dailyWeather.scss
+++ b/src/components/dailyWeather/dailyWeather.scss
@@ -14,21 +14,24 @@
         padding: 20px 20px;
         width: 860px;
         display: grid;
-        grid-template-columns: repeat(7, minmax(min-content, max-content));
-        justify-content: space-between;
-        column-gap: 20px;
+        grid-template-rows: repeat(5, 50px);
         &-item {
             display: grid;
-            grid-template-rows: repeat(5, 50px);
-            row-gap: 10px;
+            grid-template-columns: repeat(7, 100px);
+            column-gap: 10px;
+            justify-content: space-between;
             align-items: center;
-            svg {
-                height: 50px;
-                width: 50px;
+
+            &:first-child {
+                font-weight: 500;
+                border-bottom: 2px solid rgb(235, 235, 235);
             }
         }
-        &-descr {
-            font-weight: 500;
+        img {
+            display: block;
+            width: 50px;
+            height: 50px;
+            margin: auto;
         }
     }
     &__daylight {
