--- a/src/components/current/current.scss
+++ b/src/components/current/current.scss
@@ -1,15 +1,14 @@
 @import '../../styles/variables.scss';
 
 .current {
-    margin-top: 30px;
     &__temp, &__info {
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         border-radius: 15px;
-        height: 300px;
+        // height: 300px;
     }
     &__wrapper {
         display: flex;
-        max-height: 300px;
+        // max-height: 300px;
         justify-content: space-between;
     }
     &__temp {
