--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,8 @@
+$bg-color: #ffffff;
 $main-color: #4793FF;
 $main-color-bt: #2E3035;
 $second-color: rgba(71, 148, 255, .2);
 $second-color-bt: #4F4F4F;
 $third-color: #939CB0;
 $error: #ff3300;
+$shadows-color: rgba(0, 0, 0, 0.1);
