--- a/src/components/citiesList/citiesList.scss
+++ b/src/components/citiesList/citiesList.scss
@@ -14,7 +14,7 @@
         text-align: left;
         margin-bottom: 10px;
         padding: 10px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 20px $shadows-color;
         border-radius: 15px;
         &:hover {
             cursor: pointer;
