--- a/src/components/dailyWeather/dailyWeather.scss
+++ b/src/components/dailyWeather/dailyWeather.scss
@@ -7,7 +7,7 @@
         justify-content: space-between;
     }
     &__weather, &__daylight {
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 20px $shadows-color;
         border-radius: 15px;
     }
     &__weather {
