--- a/src/components/forecast/forecast.scss
+++ b/src/components/forecast/forecast.scss
@@ -4,7 +4,7 @@
     margin-top: 30px;
     &__cards {
         padding: 20px;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 20px $shadows-color;
         border-radius: 15px;
         margin-top: 10px;
         position: relative;
@@ -18,7 +18,7 @@
             background-color: $second-color;
             width: 150px !important;
             min-height: 200px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px $shadows-color;
             text-align: start;
             display: flex !important;
             flex-direction: column;
