--- a/src/components/citiesList/citiesList.scss
+++ b/src/components/citiesList/citiesList.scss
@@ -3,7 +3,7 @@
 .cities {
     margin-top: 30px;
     h1 {
-        color: $main-color;
+        color: var(--main-color);
     }
     &__wrapper {
         padding: 0 20px;
@@ -11,10 +11,12 @@
         align-items: start;
     }
     &__item {
+        color: var(--text-color);
+        background-color: var(--bg-second-color);
         text-align: left;
         margin-bottom: 10px;
         padding: 10px;
-        box-shadow: 0 0 20px $shadows-color;
+        box-shadow: 0 0 20px var(--shadows-color);
         border-radius: 15px;
         &:hover {
             cursor: pointer;
