--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,6 +8,7 @@
         padding-right: 20px;
     }
     &__item {
+        color: var(--text-color);
         display: flex;
         justify-content: space-between;
         align-items: center;
