--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -20,7 +20,7 @@
     &__title {
         font-size: 25px;
         font-weight: 700;
-        color: $main-color;
+        color: var(--main-color);
     }
     &__cities {
         font-weight: 400;
@@ -30,18 +30,19 @@
             width: 230px;
             border-radius: 7px;
             border: none;
-            background-color: $second-color;
+            background-color: var(--second-color);
             margin-right: 20px;
             padding: 0 10px;
-            box-shadow: 0 0 20px $shadows-color;
+            box-shadow: 0 0 20px var(--shadows-color);
+            color: var(--text-color);
         }
     }
     &__button {
-        background-color: $second-color;
+        background-color: var(--second-color);
         height: 35px;
         &:hover {
             background-color: white;
-            border: 1px solid $second-color;
+            border: 1px solid var(--second-color);
         }
     }
     &__theme {
