--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,15 @@
 @import '~normalize.css';
 @import './variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap');
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Barlow', sans-serif;
   box-sizing: border-box;
 }
 
 body {
   padding: 30px 0;
-  background-color: $bg-color;
+  background-color: var(--bg-color);
 }
 
 main {
@@ -42,7 +42,7 @@ button {
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
   &:hover {
     cursor: pointer;
-    background-color: $second-color;
+    background-color: var(--second-color);
   }
 }
 
@@ -61,6 +61,6 @@ button {
 .error-message {
   font-size: 24px;
   font-weight: 500;
-  color: $error;
+  color: var(--error);
 }
 
