--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -41,7 +41,7 @@
         background-color: var(--second-color);
         height: 35px;
         &:hover {
-            background-color: white;
+            background-color: var(--button-color);
             border: 1px solid var(--second-color);
         }
     }
